fix hightlight code block doesn't display on mobile phone bugs

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -676,7 +676,7 @@ h1[id] {
 }
 
 /* Tweak display of the code snippets when following an example */
-.bs-example + .highlight {
+.bs-example {
   margin: -15px -15px 15px;
   border-radius: 0;
   border-width: 0 0 1px;
@@ -693,7 +693,7 @@ h1[id] {
     border-radius: 4px 4px 0 0;
     box-shadow: none;
   }
-  .bs-example + .highlight {
+  .bs-example {
     margin-top: -16px;
     margin-left: 0;
     margin-right: 0;
@@ -911,42 +911,6 @@ h1[id] {
   height: 200px;
   margin-top: 10px;
   overflow: auto;
-}
-
-
-/*
- * Code snippets
- *
- * Generated via Pygments and Jekyll, these are snippets of HTML, CSS, and JS.
- */
-
-.highlight {
-  display: none; /* hidden by default, until >480px */
-  padding: 9px 14px;
-  margin-bottom: 14px;
-  background-color: #f7f7f9;
-  border: 1px solid #e1e1e8;
-  border-radius: 4px;
-}
-.highlight pre {
-  padding: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-  background-color: transparent;
-  border: 0;
-  white-space: nowrap;
-}
-.highlight pre code {
-  font-size: inherit;
-  color: #333; /* Effectively the base text color */
-}
-.highlight pre .lineno {
-  display: inline-block;
-  width: 22px;
-  padding-right: 5px;
-  margin-right: 10px;
-  text-align: right;
-  color: #bebec5;
 }
 
 /* Show code snippets when we have the space */
